# gran-book

./: .codecov.yaml  .editorconfig  .env.temp  .gitignore  LICENSE  Makefile  README.md  docker-compose.ci.yaml  docker-compose.yaml
.github/: PULL_REQUEST_TEMPLATE.md  labeler.yaml  reviewer.yaml
.github/ISSUE_TEMPLATE/: how-to-report.md
.github/workflows/: cd-admin-for-master.yaml  cd-admin-for-release.yaml  cd-admin-gateway-for-master.yaml  cd-api-book-for-master.yaml  cd-api-user-for-master.yaml  cd-book-api-for-master.yaml  cd-gateway-admin-for-master.yaml  cd-gateway-for-master.yaml  cd-gateway-native-for-master.yaml  cd-information-api-for-master.yaml  cd-native-gateway-for-master.yaml  cd-swagger.yaml  cd-user-api-for-master.yaml  ci-admin-for-all.yaml  ci-admin-gateway-for-all.yaml  ci-book-api-for-all.yaml  ci-gateway-for-all.yaml  ci-information-api-for-all.yaml  ci-native-for-all.yaml  ci-native-gateway-for-all.yaml  ci-proto-for-all.yaml  ci-service-for-all.yaml  ci-user-api-for-all.yaml  cron-merge-master-for-develop.yaml  pr-approve.yaml  pr-labeler.yaml  pr-reviewer.yaml
api/: Makefile  go.mod  go.sum  prototool.yaml
api/cmd/book/: main.go
api/cmd/information/: main.go
api/cmd/user/: main.go
api/config/information/: environment.go
api/config/user/: environment.go
api/gateway/_admin/: .prettierrc.js
api/gateway/_native/: .prettierignore  package.json  tsconfig.json
api/gateway/admin/: .eslintrc.js  .gitignore  .golangci.yaml  Makefile  go.mod  go.sum  nodemon.json  package.json  tsconfig.json  webpack.config.js
api/gateway/native/: .air.toml  .golangci.yaml  .realize.yaml  Makefile  go.mod  go.sum  nodemon.json  package.json  tsconfig.json
api/hack/: build-mocks.sh
api/hello/: .realize.yaml  go.mod  go.sum  main.go
api/hello/cmd/: main.go
api/hello/config/: environment.go  exec.go  grpc.go  logger.go  metrics.go
api/hello/proto/: hello_world_grpc.pb.go
api/pkg/conv/: string.go  string_test.go
api/service/: .gitignore  .golangci.yaml  BUILD.bazel  Makefile  WORKSPACE  go.mod  go.sum
api/service/cmd/user/: BUILD.bazel  main.go
api/service/internal/user/application/: BUILD.bazel  application.go  chat.go  chat_test.go  user.go  user_test.go
api/service/internal/user/cmd/: BUILD.bazel  exec.go  grpc.go  registry.go
api/service/internal/user/domain/user/: BUILD.bazel  entity.go  entity_test.go  repository.go  uploader.go  validation.go
api/service/internal/user/infrastructure/repository/: BUILD.bazel  chat.go  user.go  user_test.go
api/service/internal/user/infrastructure/storage/: BUILD.bazel  chat.go  context.go  user.go
api/service/internal/user/infrastructure/validation/: BUILD.bazel  chat.go  chat_test.go  user.go  user_test.go
api/service/internal/user/interface/server/: BUILD.bazel  admin.go  admin_test.go  auth.go  auth_test.go  chat.go  chat_test.go  error_test.go  user.go  user_test.go
api/service/internal/user/interface/validation/: BUILD.bazel  admin.go  admin_test.go  auth.go  auth_test.go  chat.go  chat_test.go  user.go  user_test.go  validator.go  validator_test.go
api/service/mock/user/application/: BUILD.bazel  application.go
api/service/mock/user/domain/user/: BUILD.bazel  validation.go
api/service/mock/user/interface/validation/: BUILD.bazel  validator.go
api/service/pkg/array/: BUILD.bazel  convert.go
api/service/pkg/conv/: BUILD.bazel
api/service/pkg/database/: BUILD.bazel  query.go
api/service/pkg/datetime/: BUILD.bazel
api/service/pkg/exception/: BUILD.bazel  error.go  error_test.go
api/service/pkg/firebase/: BUILD.bazel
api/service/pkg/firebase/authentication/: BUILD.bazel
api/service/pkg/firebase/firestore/: BUILD.bazel
api/service/pkg/firebase/storage/: BUILD.bazel
api/service/pkg/log/: BUILD.bazel  logger.go
api/service/pkg/test/: BUILD.bazel  _api.go  _mock.go  database.go  env.go  grpc.go  http.go  mock.go
api/service/proto/book/: BUILD.bazel  book_entity.proto  book_service.proto  common.proto
api/service/proto/chat/: BUILD.bazel  chat_entity.proto  chat_service.proto
api/service/proto/notification/: BUILD.bazel
api/service/proto/user/: BUILD.bazel  admin_entity.proto  admin_service.proto  auth_entity.proto  auth_service.proto  common.proto  user_entity.proto  user_service.proto
api/user/: .golangci.yaml  .realize.yaml  Makefile  go.mod  go.sum
docs/: TermsOfService
docs/01_specification/: README.md
docs/02_design/: README.md
docs/03_setup/: README.md  setup-macos.md  setup-windows.md
docs/11_frontend/: README.md
docs/12_backend/: README.md
docs/13_database/: README.md  db_design.md  gran-book_db.mwb
docs/14_infrastructure/: README.md
docs/99_other/: README.md
docs/PrivacyPolicy/: English.md  Japanese.md
docs/TermsOfService/: Japanese.md
infra/envoy/: development.yaml
infra/firebase/: .firebaserc  firebase.json
infra/functions/: README.md
infra/gateway/: .gitignore  .golangci.yaml  .realize.yaml  go.mod  go.sum  main.go
infra/grafana/: nginx-access-log.json
infra/kubernetes/: .gitignore  Makefile
infra/mysql/: ci.cnf  development.cnf  test.cnf
infra/nginx/: nginx.conf  staging.conf
infra/prometheus/: development.yaml
infra/server/: .gitignore  README.md  ubuntu-setup.sh  ubuntu-test.sh
infra/terraform/: .gitignore  Makefile
native/: .env.temp  .eslintrc.js  .gitignore  .prettierignore  .prettierrc.js  App.tsx  app.json  babel.config.js  jest.config.js  package-lock.json  package.json  tsconfig.json
native/constants/: theme.ts
native/gran-book/: app.json
proto/: .gitignore  Makefile  go.mod  go.sum  hello_world.proto  prototool.yaml
proto/cmd/: tools.go
proto/proto/: admin_service.proto  auth_service.proto  book_apiv1.proto  book_service.proto  chat_service.proto  common.proto  error_details.proto  hello_world.proto  information_apiv1.proto  status.proto  user.proto  user_apiv1.proto  user_service.proto
web/admin/: .babel.config.js  .eslintignore  .eslintrc.js  .firebaserc  .gitignore  .prettierignore  README.md  firebase.json  jest.config.js  nuxt.config.js  package.json  tsconfig.json
(+1758 files in other folders)
