load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "lib",
    srcs = ["main.go"],
    importpath = "",
    visibility = ["//visibility:private"],
)

go_binary(
    name = "user",
    embed = [":user_lib"],
    visibility = ["//visibility:public"],
)

go_library(
    name = "user_lib",
    srcs = ["main.go"],
    importpath = "github.com/calmato/gran-book/api/service/cmd/user",
    visibility = ["//visibility:private"],
    deps = ["//internal/user/cmd"],
)
