load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "array",
    srcs = [
        "contains.go",
        "convert.go",
    ],
    importpath = "github.com/calmato/gran-book/api/service/pkg/array",
    visibility = ["//visibility:public"],
)

go_test(
    name = "array_test",
    srcs = [
        "contains_test.go",
        "convert_test.go",
    ],
    embed = [":array"],
    deps = ["@com_github_stretchr_testify//assert"],
)
