load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "database",
    srcs = [
        "client.go",
        "query.go",
    ],
    importpath = "github.com/calmato/gran-book/api/service/pkg/database",
    visibility = ["//visibility:public"],
    deps = [
        "//pkg/array",
        "@io_gorm_driver_mysql//:mysql",
        "@io_gorm_gorm//:gorm",
        "@io_gorm_gorm//logger",
    ],
)
