load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "datetime",
    srcs = ["jst.go"],
    importpath = "github.com/calmato/gran-book/api/service/pkg/datetime",
    visibility = ["//visibility:public"],
)

go_test(
    name = "datetime_test",
    srcs = ["jst_test.go"],
    embed = [":datetime"],
    deps = [
        "@com_github_stretchr_testify//assert",
        "@com_github_stretchr_testify//require",
    ],
)
