load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "test",
    srcs = [
        "api.go",
        "database.go",
        "env.go",
        "mock.go",
        "time.go",
    ],
    importpath = "github.com/calmato/gran-book/api/service/pkg/test",
    visibility = ["//visibility:public"],
    deps = [
        "//mock/user/application",
        "//mock/user/domain/user",
        "//mock/user/interface/validation",
        "//pkg/database",
        "//pkg/datetime",
        "@com_github_golang_mock//gomock",
        "@com_github_kelseyhightower_envconfig//:envconfig",
        "@com_github_stretchr_testify//require",
        "@org_golang_google_grpc//codes",
        "@org_golang_google_grpc//status",
        "@org_golang_google_protobuf//proto",
    ],
)
