load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "book",
    srcs = [
        "book_entity.pb.go",
        "book_entity.pb.validate.go",
        "book_service.pb.go",
        "book_service.pb.validate.go",
        "book_service_grpc.pb.go",
        "common.pb.go",
        "common.pb.validate.go",
    ],
    importpath = "github.com/calmato/gran-book/api/service/proto/book",
    visibility = ["//visibility:public"],
    deps = [
        "@com_github_envoyproxy_protoc_gen_validate//validate",
        "@org_golang_google_grpc//:go_default_library",
        "@org_golang_google_grpc//codes",
        "@org_golang_google_grpc//status",
        "@org_golang_google_protobuf//reflect/protoreflect",
        "@org_golang_google_protobuf//runtime/protoimpl",
        "@org_golang_google_protobuf//types/known/anypb",
    ],
)
