load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "notification",
    srcs = [
        "common.pb.go",
        "common.pb.validate.go",
        "notification_entity.pb.go",
        "notification_entity.pb.validate.go",
        "notification_service.pb.go",
        "notification_service.pb.validate.go",
        "notification_service_grpc.pb.go",
    ],
    importpath = "github.com/calmato/gran-book/api/service/proto/notification",
    visibility = ["//visibility:public"],
    deps = [
        "@com_github_envoyproxy_protoc_gen_validate//validate",
        "@org_golang_google_grpc//:go_default_library",
        "@org_golang_google_grpc//codes",
        "@org_golang_google_grpc//status",
        "@org_golang_google_protobuf//reflect/protoreflect",
        "@org_golang_google_protobuf//runtime/protoimpl",
        "@org_golang_google_protobuf//types/known/anypb",
    ],
)
