load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "user",
    srcs = [
        "admin_entity.pb.go",
        "admin_entity.pb.validate.go",
        "admin_service.pb.go",
        "admin_service.pb.validate.go",
        "admin_service_grpc.pb.go",
        "auth_entity.pb.go",
        "auth_entity.pb.validate.go",
        "auth_service.pb.go",
        "auth_service.pb.validate.go",
        "auth_service_grpc.pb.go",
        "common.pb.go",
        "common.pb.validate.go",
        "user_entity.pb.go",
        "user_entity.pb.validate.go",
        "user_service.pb.go",
        "user_service.pb.validate.go",
        "user_service_grpc.pb.go",
    ],
    importpath = "github.com/calmato/gran-book/api/service/proto/user",
    visibility = ["//visibility:public"],
    deps = [
        "@com_github_envoyproxy_protoc_gen_validate//validate",
        "@org_golang_google_grpc//:go_default_library",
        "@org_golang_google_grpc//codes",
        "@org_golang_google_grpc//status",
        "@org_golang_google_protobuf//reflect/protoreflect",
        "@org_golang_google_protobuf//runtime/protoimpl",
        "@org_golang_google_protobuf//types/known/anypb",
    ],
)
