load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "firestore",
    srcs = ["client.go"],
    importpath = "github.com/calmato/gran-book/api/service/pkg/firebase/firestore",
    visibility = ["//visibility:public"],
    deps = [
        "@com_google_cloud_go_firestore//:firestore",
        "@com_google_firebase_go_v4//:go",
    ],
)
