load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "storage",
    srcs = ["client.go"],
    importpath = "github.com/calmato/gran-book/api/service/pkg/firebase/storage",
    visibility = ["//visibility:public"],
    deps = [
        "@com_github_google_uuid//:uuid",
        "@com_google_cloud_go_storage//:storage",
        "@com_google_firebase_go_v4//:go",
    ],
)
