load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "repository",
    srcs = [
        "database.go",
        "user.go",
    ],
    importpath = "github.com/calmato/gran-book/api/service/internal/user/infrastructure/repository",
    visibility = ["//:__subpackages__"],
    deps = [
        "//internal/user/domain/user",
        "//pkg/database",
        "//pkg/exception",
        "//pkg/firebase/authentication",
        "//pkg/metadata",
        "@com_google_firebase_go_v4//auth",
        "@io_gorm_gorm//:gorm",
    ],
)

go_test(
    name = "repository_test",
    srcs = ["user_test.go"],
    embed = [":repository"],
    deps = [
        "//internal/user/domain/user",
        "//pkg/database",
        "//pkg/test",
        "@com_github_golang_mock//gomock",
        "@com_github_stretchr_testify//assert",
        "@com_github_stretchr_testify//require",
    ],
)
