load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "validation",
    srcs = ["user.go"],
    importpath = "github.com/calmato/gran-book/api/service/internal/user/infrastructure/validation",
    visibility = ["//:__subpackages__"],
    deps = [
        "//internal/user/domain/user",
        "//pkg/exception",
    ],
)

go_test(
    name = "validation_test",
    srcs = ["user_test.go"],
    embed = [":validation"],
    deps = [
        "//internal/user/domain/user",
        "//pkg/test",
        "@com_github_golang_mock//gomock",
        "@com_github_stretchr_testify//assert",
    ],
)
