load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "server",
    srcs = [
        "admin.go",
        "auth.go",
        "error.go",
        "user.go",
    ],
    importpath = "github.com/calmato/gran-book/api/service/internal/user/interface/server",
    visibility = ["//:__subpackages__"],
    deps = [
        "//internal/user/application",
        "//internal/user/domain/user",
        "//internal/user/interface/validation",
        "//pkg/database",
        "//pkg/exception",
        "//proto/user",
        "@go_googleapis//google/rpc:errdetails_go_proto",
        "@org_golang_google_grpc//codes",
        "@org_golang_google_grpc//status",
    ],
)

go_test(
    name = "server_test",
    srcs = [
        "admin_test.go",
        "auth_test.go",
        "error_test.go",
        "user_test.go",
    ],
    embed = [":server"],
    deps = [
        "//internal/user/domain/user",
        "//pkg/exception",
        "//pkg/test",
        "//proto/user",
        "@com_github_golang_mock//gomock",
        "@com_github_stretchr_testify//assert",
        "@go_googleapis//google/rpc:errdetails_go_proto",
        "@org_golang_google_grpc//codes",
        "@org_golang_google_grpc//status",
    ],
)
