load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "validation",
    srcs = ["validator.go"],
    importpath = "github.com/calmato/gran-book/api/service/mock/user/interface/validation",
    visibility = ["//visibility:public"],
    deps = [
        "//proto/user",
        "@com_github_golang_mock//gomock",
    ],
)
